yaml/ingress-routes/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.cluster.local`)
      services:
        - kind: Service
          port: 80
          name: argocd-server
          namespace: argocd
