yaml/ingress-routes/grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana-192-168-0-105.nip.io`)
      services:
        - kind: Service
          port: 80
          name: grafana
          namespace: grafana
