yaml/ingress-routes/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik-dashboard-192-168-0-105.nip.io`)
      services:
        - kind: Service
          port: 9000
          name: traefik-dashboard
          namespace: kube-system
